# purge-assignment

./: .gitignore  Cargo.toml  Makefile  README.md  dump.rdb  env-templates.md  postman_collection.json  run-backend.sh  setup-env.sh  start-mpc.sh
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_balance_tracking.sql  003_add_mpc_wallet.sql  004_mpc_wallet_metadata.sql  005_add_asset_tracking.sql
backend/src/: auth.rs  main.rs  solana_client.rs
backend/src/routes/: mod.rs  solana.rs  user.rs  wallet.rs
indexer/: Cargo.toml
indexer/src/: balance_tracker.rs  database.rs  handlers.rs  main.rs  models.rs  subscription.rs  yellowstone.rs  yellowstone_client.rs
mpc/: Cargo.toml  README.md  clear_databases.sh  mpc1.db  mpc2.db  mpc3.db  run_mpc_instances.sh  run_mpc_servers.sh  setup_database.sh  setup_databases.sh
mpc/data/: mpc8081.db  mpc8082.db  mpc8083.db
mpc/migrations/: 001_create_keyshares.sql  001_initial_schema.sql
mpc/src/: api_tests.rs  database.rs  distributed_mpc.rs  error.rs  lib.rs  main.rs  mpc.rs  serialization.rs  solana.rs  tss.rs
mpc/src/solana/: client.rs  mod.rs  transaction.rs
mpc/src/tss/: cli.rs  mod.rs  signing.rs  types.rs  wallet.rs
mpc/src/utils/: mod.rs  serialization.rs
store/: Cargo.toml
store/src/: asset.rs  lib.rs  redis.rs  user.rs
