[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
redis = { version = "0.32.5", features = ["tokio-comp"] }
bcrypt = "0.15"
# MPC and Solana dependencies
frost-mpc = { path = "../mpc" }
solana-client = "2.1.8"
solana-sdk = "2.1.8"
hex = "0.4"
bincode = "1.3"
