[package]
name = "solana-mpc-tss"
version = "1.0.0"
edition = "2021"
description = "A comprehensive Rust library for Solana Multi-Party Computation (MPC) and Threshold Signature Schemes (TSS) - Compatible with ZenGo-X/solana-tss"
license = "MIT"
keywords = ["solana", "mpc", "tss", "threshold-signatures", "multi-party-computation", "blockchain", "cryptography", "ed25519", "rust"]
categories = ["cryptography", "web-programming::http-server"]

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
solana-sdk = "2.0"
solana-client = "2.0"
ed25519-dalek = "2.0"
bs58 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
# Additional crypto dependencies
blake2 = "0.10"
# Async runtime
futures = "0.3"
