[package]
name = "frost-mpc"
version = "1.0.0"
edition = "2021"
description = "A FROST-ed25519 Multi-Party Computation library that follows the README exactly"
license = "MIT"
keywords = [
    "frost",
    "mpc",
    "tss",
    "threshold-signatures",
    "multi-party-computation",
    "ed25519",
    "rust",
]
categories = ["cryptography", "web-programming::http-server"]

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
# Database dependencies
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }
frost-ed25519 = "2.2.0"
# Solana dependencies
solana-sdk = "2.0"
solana-client = "2.0"
bincode = "1.3"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3.0"